# target-determinator

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  bazel_diff_maven_install.json  extensions.bzl  go.mod  go.sum  maven_install.json  multitool.lock.json  mypatch.patch
cli/: BUILD.bazel  flags.go
common/: BUILD.bazel  relpath.go  relpath_test.go
common/sorted_set/: BUILD.bazel  sorted_set.go  sorted_set_test.go
common/versions/: BUILD.bazel  versions.go  versions_test.go
driver/: BUILD.bazel  driver.go
hash-differ/: BUILD.bazel  hash-differ.go
hash-persister/: BUILD.bazel  hash-persister.go
pkg/: BUILD.bazel  bazel.go  bazel_info.go  cache.go  cache_test.go  configurations.go  hash_cache.go  hash_cache_test.go  hash_persistence.go  normalizer.go  normalizer_test.go  results_storage.go  results_storage_test.go  target_determinator.go  target_determinator_test.go  targets_list.go  walker.go  walker_test.go
rules/: copy_proto_output.bzl  multi_platform_go_binary.bzl
scripts/: format  (+3 more)
target-determinator/: BUILD.bazel  target-determinator.go
testdata/HelloWorld/: BUILD.bazel  Greeting.java  HelloWorld.java
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/: BUILD.bazel  BazelDiffIntegrationTest.java  BazelDifferIntegrationTest.java  Commits.java  TargetComputationErrorException.java  TargetDeterminator.java  TargetDeterminatorIntegrationTest.java  TargetDeterminatorSpecificFlagsTest.java  TestRepo.java  TestdataRepo.java  Tests.java  Util.java
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/: README.md
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/add_dependent_on_simple_java_library/: BUILD.bazel.mv  SubmoduleSimple.java
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/add_simple_package_rule/: WORKSPACE.bazel
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/alias_add_target/java/example/: BUILD.bazel.mv
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/alias_change_actual/java/example/: BUILD.bazel.mv
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/alias_change_target_through_alias/java/example/: ExampleTest.java
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/alias_change_target_through_alias_to_file/java/example/: BUILD.bazel.mv
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/bazelrc_host_javacopt/: .bazelrc
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/bazelrc_included_javacopt/: .bazelrc
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/change_attributes_via_indirection/: WORKSPACE.bazel
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/change_attributes_via_indirection/rules/: simple_java_library.bzl
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/change_attributes_via_indirection/rules/private/: simple_java_library.bzl
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/change_starlark_rule_implementation/rules/: simple_java_library.bzl
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/empty_submodule/: README.md
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/has_globs/globs/: BUILD.bazel.mv
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/java_used_in_genrule/configurations/: BUILD.bazel.mv  JBin.java  run_jbin.sh
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/noop_refactor_in_workspace_file/: WORKSPACE.bazel
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/noop_refactor_starklark_rule_implementation/rules/: simple_java_library.bzl
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/one_test_bazel_7_0_0/: .gitignore
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/one_test_with_gitignore/: .gitignore
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/pathological_rules_five_targets/: WORKSPACE.bazel
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/pathological_rules_single_target/weird/: BUILD.bazel.mv
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/refactored_workspace_indirectly/: WORKSPACE.bazel  workspace.bzl
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/rules_in_external_repo/: .bazelignore  WORKSPACE.bazel
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/simple_java_library_and_java_tests/rules/: simple_java_library.bzl
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/two_languages_imported_bazelrc_affecting_java/config/: mandatory
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/two_languages_optional_missing_try_import/sh/: sh_test.sh
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/two_languages_optional_present_bazelrc_affecting_java/: .bazelrc
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/two_languages_optional_present_bazelrc_affecting_java/config/: optional
tests/integration/java/com/github/bazel_contrib/target_determinator/integration/testdata/two_languages_optional_present_bazelrc_affecting_java/sh/: BUILD.bazel.mv
tests/integration/java/com/github/bazel_contrib/target_determinator/label/: BUILD.bazel  Label.java  LabelTest.java
tools/: BUILD.bazel  tools.go
(+34 files in other folders)
