load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:resolve go github.com/bazelbuild/bazel-gazelle/label @com_github_bazelbuild_bazel_gazelle//label

# gazelle:prefix github.com/bazel-contrib/target-determinator
gazelle(
    name = "gazelle",
    mode = "fix",
)

config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
)
