###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "target-determinator",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "gazelle", version = "0.41.0", repo_name = "bazel_gazelle")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "rules_go", version = "0.51.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_java", version = "8.7.1")
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "rules_multitool", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.23.0",
)
use_repo(go_sdk, "go_sdk")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Patch regexp pattern until new release of bazel-gazelle
go_deps.module_override(
    patch_strip = 0,
    patches = [
        "//third_party/patches:gazelle_regexp.patch",
    ],
    path = "github.com/bazelbuild/bazel-gazelle",
)
use_repo(
    go_deps,
    "com_github_aristanetworks_goarista",
    "com_github_bazelbuild_bazel_gazelle",
    "com_github_google_btree",
    "com_github_google_uuid",
    "com_github_hashicorp_go_version",
    "com_github_otiai10_copy",
    "com_github_stretchr_testify",
    "com_github_wi2l_jsondiff",
    "org_golang_google_protobuf",
    "org_golang_x_tools",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.guava:guava:31.0.1-jre",
        "junit:junit:4.12",
        "org.eclipse.jgit:org.eclipse.jgit:5.11.0.202103091610-r",
        "org.hamcrest:hamcrest-all:1.3",
    ],
    fail_if_repin_required = True,
    fetch_sources = True,
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")

##########################################################
# bazel-differ: https://github.com/ewhauser/bazel-differ #
##########################################################
multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//third_party/multitool:multitool.lock.json")
use_repo(multitool, "multitool")

####################################################
# bazel-diff: https://github.com/Tinder/bazel-diff #
####################################################
non_module_deps = use_extension("//:extensions.bzl", "extension")
use_repo(non_module_deps, "bazel-diff")
