module(name = "target-determinator")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_proto", version = "7.1.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.6")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(
    go_mod = "//:go.mod",
)
use_repo(go_deps, "com_github_aristanetworks_goarista", "com_github_google_btree", "com_github_google_uuid", "com_github_hashicorp_go_version", "com_github_otiai10_copy", "com_github_stretchr_testify", "com_github_wi2l_jsondiff", "org_golang_google_protobuf")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.guava:guava:31.0.1-jre",
        "junit:junit:4.12",
        "org.eclipse.jgit:org.eclipse.jgit:5.11.0.202103091610-r",
        "org.hamcrest:hamcrest-all:1.3",
    ],
    fail_if_repin_required = True,
    fetch_sources = True,
    lock_file = "@//:maven_install.json",
)
use_repo(maven, "maven")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "bazel_diff",
    dev_dependency = True,
    downloaded_file_path = "bazel-diff_deploy.jar",
    sha256 = "5f36e74a8d6167e4d31f663526a63be3e3728456d8b5b4a84503315dd10e65e7",
    url = "https://github.com/Tinder/bazel-diff/releases/download/9.0.0/bazel-diff_deploy.jar",
)

##########################################################
# bazel-differ: https://github.com/ewhauser/bazel-differ #
##########################################################

http_file(
    name = "bazel_differ_linux_arm64",
    dev_dependency = True,
    executable = True,
    integrity = "sha256-eFjQ2D6auwcnycoY67qOx6NJPsI2ZKSUv1cPdaBVtOo=",
    url = "https://github.com/ewhauser/bazel-differ/releases/download/v0.0.7/bazel-differ-linux-arm64",
)

http_file(
    name = "bazel_differ_linux_x86_64",
    dev_dependency = True,
    executable = True,
    integrity = "sha256-quwSTcr6dHF0Jh7JyCR74zMsItHRcS7YD7YSAClp5CA=",
    url = "https://github.com/ewhauser/bazel-differ/releases/download/v0.0.7/bazel-differ-linux-x86_64",
)

http_file(
    name = "bazel_differ_darwin_arm64",
    dev_dependency = True,
    executable = True,
    integrity = "sha256-0dbJKJXHzTr0/43nJxFO+xGbCPiGYEqVirve25SXss4=",
    url = "https://github.com/ewhauser/bazel-differ/releases/download/v0.0.7/bazel-differ-darwin-arm64",
)

http_file(
    name = "bazel_differ_darwin_x86_64",
    dev_dependency = True,
    executable = True,
    integrity = "sha256-wS/sbX/XgsIaX51VUOGyv7wRzKkmOUgLHzx+wg2weVE=",
    url = "https://github.com/ewhauser/bazel-differ/releases/download/v0.0.7/bazel-differ-darwin-x86_64",
)
