load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cli",
    srcs = ["flags.go"],
    importpath = "github.com/bazel-contrib/target-determinator/cli",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//pkg",
        "//version",
    ],
)
