load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "common",
    srcs = ["relpath.go"],
    importpath = "github.com/bazel-contrib/target-determinator/common",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aristanetworks_goarista//key",
        "@com_github_aristanetworks_goarista//path",
    ],
)

go_test(
    name = "common_test",
    srcs = ["relpath_test.go"],
    embed = [":common"],
)
