load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//rules:multi_platform_go_binary.bzl", "multi_platform_go_binary")

go_library(
    name = "driver_lib",
    srcs = ["driver.go"],
    importpath = "github.com/bazel-contrib/target-determinator/driver",
    visibility = ["//visibility:private"],
    deps = [
        "//cli",
        "//pkg",
        "//third_party/protobuf/bazel/analysis",
        "@bazel_gazelle//label:go_default_library",
    ],
)

multi_platform_go_binary(
    name = "driver",
    embed = [":driver_lib"],
    visibility = ["//visibility:public"],
)
