load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pkg",
    srcs = [
        "bazel.go",
        "bazel_info.go",
        "configurations.go",
        "hash_cache.go",
        "hash_persistence.go",
        "normalizer.go",
        "target_determinator.go",
        "targets_list.go",
        "walker.go",
    ],
    importpath = "github.com/bazel-contrib/target-determinator/pkg",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//common/sorted_set",
        "//common/versions",
        "//third_party/protobuf/bazel/analysis",
        "//third_party/protobuf/bazel/build",
        "@bazel_gazelle//label",
        "@com_github_aristanetworks_goarista//path",
        "@com_github_hashicorp_go_version//:go-version",
        "@com_github_wi2l_jsondiff//:jsondiff",
        "@org_golang_google_protobuf//encoding/protodelim",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "pkg_test",
    srcs = [
        "hash_cache_test.go",
        "normalizer_test.go",
        "target_determinator_test.go",
    ],
    data = ["//testdata/HelloWorld:all_srcs"],
    embed = [":pkg"],
    rundir = ".",
    deps = [
        "//common",
        "//third_party/protobuf/bazel/analysis",
        "//third_party/protobuf/bazel/build",
        "@bazel_gazelle//label",
        "@com_github_otiai10_copy//:copy",
        "@org_golang_google_protobuf//proto",
    ],
)
