load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "target-determinator_lib",
    srcs = ["target-determinator.go"],
    importpath = "github.com/bazel-contrib/target-determinator/target-determinator",
    visibility = ["//visibility:private"],
    deps = [
        "//cli:cli_lib",
        "//pkg",
        "//third_party/protobuf/bazel/analysis",
        "@bazel_gazelle//label:go_default_library",
    ],
)

go_binary(
    name = "target-determinator",
    embed = [":target-determinator_lib"],
    visibility = ["//visibility:public"],
)
