load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//rules:multi_platform_go_binary.bzl", "multi_platform_go_binary")

go_library(
    name = "target-determinator_lib",
    srcs = ["target-determinator.go"],
    importpath = "github.com/bazel-contrib/target-determinator/target-determinator",
    visibility = ["//visibility:private"],
    deps = [
        "//cli",
        "//pkg",
        "//third_party/protobuf/bazel/analysis",
        "@bazel_gazelle//label:go_default_library",
    ],
)

multi_platform_go_binary(
    name = "target-determinator",
    embed = [":target-determinator_lib"],
    visibility = ["//visibility:public"],
)
