load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sorted_set",
    srcs = ["sorted_set.go"],
    importpath = "github.com/bazel-contrib/target-determinator/common/sorted_set",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_btree//:btree"],
)

go_test(
    name = "sorted_set_test",
    srcs = ["sorted_set_test.go"],
    deps = [
        ":sorted_set",
        "@com_github_google_uuid//:uuid",
    ],
)
