load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@rules_jvm_external//:defs.bzl", "artifact")

filegroup(
    name = "test-data",
    srcs = glob(["testdata/**/*"]),
)

java_test(
    name = "TargetDeterminatorIntegrationTest",
    timeout = "long",
    srcs = [
        "TargetDeterminatorIntegrationTest.java",
    ],
    data = ["//target-determinator"],
    env_inherit = ["CC"],
    jvm_flags = [
        "-Dtarget_determinator=$(rootpath //target-determinator)",
    ],
    shard_count = 5,
    tags = ["no-sandbox"],
    deps = [
        ":tests",
        ":util",
        artifact("com.google.guava:guava"),
        artifact("com.google.code.findbugs:jsr305"),
        artifact("junit:junit"),
        "//tests/integration/java/com/github/bazel_contrib/target_determinator/label",
    ],
)

java_test(
    name = "TargetDeterminatorSpecificFlagsTest",
    srcs = [
        "TargetDeterminatorSpecificFlagsTest.java",
    ],
    data = ["//target-determinator"],
    env_inherit = ["CC"],
    jvm_flags = [
        "-Dtarget_determinator=$(rootpath //target-determinator)",
    ],
    shard_count = 2,
    tags = ["no-sandbox"],
    deps = [
        ":tests",
        ":util",
        "//tests/integration/java/com/github/bazel_contrib/target_determinator/label",
        artifact("junit:junit"),
        artifact("org.eclipse.jgit:org.eclipse.jgit"),
        artifact("org.hamcrest:hamcrest-all"),
    ],
)

java_library(
    name = "tests",
    srcs = [
        "Tests.java",
    ],
    exports = [":util"],
    deps = [
        ":util",
        "//tests/integration/java/com/github/bazel_contrib/target_determinator/label",
        artifact("com.google.guava:guava"),
        artifact("org.eclipse.jgit:org.eclipse.jgit"),
        artifact("org.hamcrest:hamcrest-all"),
        artifact("junit:junit"),
    ],
)

java_library(
    name = "util",
    srcs = [
        "TargetComputationErrorException.java",
        "TargetDeterminator.java",
        "TestdataRepo.java",
        "TestRepo.java",
        "Util.java",
    ],
    deps = [
        "//tests/integration/java/com/github/bazel_contrib/target_determinator/label",
        artifact("com.google.guava:guava"),
        artifact("junit:junit"),
        artifact("org.eclipse.jgit:org.eclipse.jgit"),
        artifact("org.hamcrest:hamcrest-all"),
        "@bazel_tools//tools/java/runfiles",
    ],
    data = [
        ":test-data",
    ],
)
