load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

RULES_GIT_TAG = "rules/v0/source-and-target"

RULES_ARCHIVE_SHA256 = "876510bd558a5364085ba75f64f32c73e71398e2b5170fd0be20db115f1d75e5"

http_archive(
    name = "rules",
    sha256 = RULES_ARCHIVE_SHA256,
    strip_prefix = "target-determinator-testdata-" + RULES_GIT_TAG.replace("/", "-"),
    url = "https://github.com/bazel-contrib/target-determinator-testdata/archive/refs/tags/" + RULES_GIT_TAG + ".tar.gz",
)
